--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -15,10 +15,11 @@
 
 #left {
     float: left;
-    background: -webkit-linear-gradient(white, gray); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(white, gray); /* Standard syntax */
+    //background: -webkit-linear-gradient(white, gray); /* For Safari 5.1 to 6.0 */
+    //background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
+    //background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
+    //background: linear-gradient(white, gray); /* Standard syntax */
+    background: #ffffff;
     font-size: 12pt;
     width: 20%;
 }
@@ -32,18 +33,20 @@
 
 .center_content {
     position: relative;
-    background: -webkit-linear-gradient(white, gray); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(white, gray); /* Standard syntax */
+    //background: -webkit-linear-gradient(white, gray); /* For Safari 5.1 to 6.0 */
+    //background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
+    //background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
+    //background: linear-gradient(white, gray); /* Standard syntax */
+    background: #ffffff;
     padding: 5px;
 }
 
 .left_content {
-    background: -webkit-linear-gradient(white, gray); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(white, gray); /* Standard syntax */
+    //background: -webkit-linear-gradient(white, gray); /* For Safari 5.1 to 6.0 */
+    //background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
+    //background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
+    //background: linear-gradient(white, gray); /* Standard syntax */
+    background: #ffffff;
     font-size: 14pt;
     margin-left: 20%;
     padding: 5px;
